k8s/deployments/deployment-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: istioexample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: localhost:32000/product-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: istioexample
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: product-service
